<resources>
    <string name="app_name">Spade.Inspector</string>
    <string name="Accountlogin">Account Login</string>
    <string name="email">Email/Mobile</string>
    <string name="password">Password</string>
    <string name="show_password">Show Password</string>
    <string name="forget_password">Forget Password?</string>
    <string name="need_help">Need Help!</string>
    <string name="sign_in">Sign In</string>
    <string name="new_user">New User Register Here</string>
    <string name="invalid_email">Invalid Email</string>
    <string name="invalid_email_mobile">Invalid Email or Mobile number</string>
    <string name="dialog_password_incorrect">Login failed..</string>
    <string name="dialog_password_incorrect_helper">Username/Password is incorrect</string>
    <string name="login_successfull">login Successfull</string>
    <string name="dialog_please_wait">"Please Wait..."</string>
    <string name="password_er">Password must be 8-32 character</string>
    <string name="title_activity_profile">My Farms</string>
    <string name="samepassword">Password must be same</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>

    <string name="RegisterAccount">Register New Account</string>
    <string name="email_signup">Email</string>
    <string name="mobile_no">Mobile No.</string>
    <string name="role">Role</string>
    <string name="farmer">Farmer</string>
    <string name="inspector">Inspector</string>
    <string name="admin">Admin</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register">Register</string>
    <string name="old_user">Already a member? Login</string>
    <string name="invalid_mobile_no">Invalid Mobile Number</string>

    <string name="title_activity_set_language">SetLanguageActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_landing">LandingActivity</string>
    <string name="title_activity_maps">Map</string>
    <string name="internet_not_connected">Please check your internet Connection and Try again</string>
    <string name="error_text">Network error Please Try again..</string>
    <string name="back_pressed">Press Back again to Exit.</string>
    <string name="welcome">Login Successful</string>
    <string name="profile_first">Please fill your profile first</string>
    <string name="otp_first">Please verify your Otp first</string>
    <string name="inspector_id">Please Login with Inspector Login id</string>
    <string name="server_error">Sorry for the inconvinience please try again later</string>
</resources>
