<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#EDEDED"
    android:orientation="vertical"
    android:scrollbarAlwaysDrawVerticalTrack="true">

    <include
        android:id="@+id/toolbar_actionbar"
        layout="@layout/my_title_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_edesg_background"
        android:elevation="4dp"
        android:layout_marginRight="30dp"
        android:layout_marginLeft="30dp"
        android:orientation="vertical"
        android:padding="10dp"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="5dp">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/emailsignup"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/ic_email_grey_18dp"
                    android:singleLine="true"
                    android:hint="@string/email_signup"
                    android:textColor="@color/black"
                    android:inputType="textEmailAddress" />
            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/mobilesignup"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/ic_phone_iphone_grey_18dp"
                    android:singleLine="true"
                    android:textColor="@color/black"

                    android:hint="@string/mobile_no"
                    android:inputType="phone" />
            </android.support.design.widget.TextInputLayout>



            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.scottyab.showhidepasswordedittext.ShowHidePasswordEditText
                    android:id="@+id/signuppass"
                    android:layout_marginTop="16dp"
                    android:textColor="@color/black"
                    android:singleLine="true"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    android:drawableLeft="@drawable/ic_lock_grey_18dp"
                    app:drawable_hide="@drawable/eye_show"
                    app:drawable_show="@drawable/eye_hidden"
                    app:tint_color="@color/colorPrimaryDark"
                    android:inputType="textPassword"/>




            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


                <com.scottyab.showhidepasswordedittext.ShowHidePasswordEditText
                    android:id="@+id/signuppassconfirm"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:singleLine="true"
                    android:hint="@string/confirm_password"
                    android:textColor="@color/black"
                    android:drawableLeft="@drawable/ic_lock_grey_18dp"
                    app:drawable_hide="@drawable/eye_show"
                    app:drawable_show="@drawable/eye_hidden"
                    app:tint_color="@color/colorPrimaryDark"
                    android:inputType="textPassword"/>


            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/registerbutt"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="22dp"
                android:background="@color/colorPrimaryDark"
                android:text="@string/register"
                android:textAllCaps="false"
                android:textColor="#fff"
                android:textSize="18sp" />

           <!-- <Button
                android:id="@+id/admincalender"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="#d67601"
                android:text="For Admin"
                android:textAllCaps="false"
                android:textColor="#fff"
                />-->


            <TextView
                android:id="@+id/olduser"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:textSize="15sp"
                android:textColor="@color/colorPrimaryDark"
                android:paddingTop="5dp"
                android:text="@string/old_user" />

        </LinearLayout>

    </RelativeLayout>


</RelativeLayout>
